# fast_api_zero

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yml
fast_api_do_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_api_do_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: b04c11918ba4_alteração_feita_na_variavel.py  b6783a4075af_create_users_table.py  d11b251454f5_criação_inicial_das_tabelas.py  da4c6136f60b_excluindo_campo_updated_at.py  f91fa02444ec_create_novo_campo_updated_at.py
tests/: .coverage  conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
